Заменены Lombok-аннотации @Data над JPA-сущностями на другие для избежания проблем производительности. Исправлена ошибка логики импорта товаров, вследствие чего введено поле external_id в сущность Product. Теперь не происходит затирание имеющихся товаров в БД, созданных вручную до первоначального импорта (при условии пересечения их id с id внешнего источника). Исправлена архитектура планировщика, теперь он работает через сервисный слой без restTemplate. Для избежания денормализация данных при организации внешних связей по ключу введены синтетические первичные ключи для сущностей Rating и Category. Для полей сущностей с аннотациями @ManyToOne явно указан FetchType.LAZY