@@ -1,12 +1,16 @@
 package com.gman97.fakestoreapi.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.gman97.fakestoreapi.dto.ProductDto;
 import com.gman97.fakestoreapi.dto.ProductFilter;
 import com.gman97.fakestoreapi.dto.RatingReadDto;
 import com.gman97.fakestoreapi.entity.Category;
 import com.gman97.fakestoreapi.entity.Product;
+import com.gman97.fakestoreapi.entity.RateCount;
 import com.gman97.fakestoreapi.entity.Rating;
-import com.gman97.fakestoreapi.entity.RatingId;
+import com.gman97.fakestoreapi.mapper.ImportProductMapper;
 import com.gman97.fakestoreapi.mapper.ProductCreateEditMapper;
 import com.gman97.fakestoreapi.mapper.ProductReadMapper;
 import com.gman97.fakestoreapi.mapper.RatingReadMapper;
@@ -23,7 +27,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,11 +40,15 @@ class ProductServiceTest {
     private ProductService productService;
 
     @Mock
+    private ObjectMapper objectMapper;
+    @Mock
     private ProductRepository productRepository;
     @Mock
     private CategoryRepository categoryRepository;
     @Mock
     private RatingRepository ratingRepository;
+    @Mock
+    private ImportProductMapper importProductMapper;
     @Mock
     private ProductReadMapper productReadMapper;
     @Mock
@@ -56,21 +63,23 @@ class ProductServiceTest {
     void setUp() {
         product1 = Product.builder()
                 .id(1)
+                .externalId(10)
                 .title("dummy")
                 .price(1.0D)
                 .description("dummy")
-                .category(new Category("dummy"))
+                .category(new Category(1, "dummy"))
                 .image("https://dummy.foo/img.jpg")
-                .rating(new Rating(new RatingId(3.0D, 359)))
+                .rating(new Rating(1L, new RateCount(3.0D, 359)))
                 .build();
         product2 = Product.builder()
-                .id(2)
+                .id(null)
+                .externalId(12)
                 .title("dummy2")
                 .price(2.0D)
                 .description("dummy2")
-                .category(new Category("dummy2"))
+                .category(new Category(2, "dummy2"))
                 .image("https://dummy.foo/img2.jpg")
-                .rating(new Rating(new RatingId(5.0D, 159)))
+                .rating(new Rating(null, new RateCount(5.0D, 159)))
                 .build();
     }
 
@@ -96,33 +105,38 @@ class ProductServiceTest {
     }
 
     @Test
-    void saveImportedProducts() {
+    void saveImportedProducts() throws JsonProcessingException {
         var dummyDtos = List.of(new ProductDto(), new ProductDto());
 
-        when(productCreateEditMapper.map(any(ProductDto.class))).thenReturn(product1).thenReturn(product2);
+        when(objectMapper.readValue(anyString(), any(TypeReference.class))).thenReturn(dummyDtos);
+        when(importProductMapper.map(any(ProductDto.class))).thenReturn(product1).thenReturn(product2);
 
-        when(categoryRepository.findAllById(anyList())).thenReturn(List.of(product1.getCategory()));
-        when(categoryRepository.saveAllAndFlush(anyIterable())).thenReturn(List.of(product1.getCategory()));
+        when(categoryRepository.findAllByNames(anyList())).thenReturn(List.of(product1.getCategory()));
+        when(categoryRepository.save(any(Category.class))).thenReturn(product2.getCategory());
+        doNothing().when(categoryRepository).flush();
 
-        when(ratingRepository.findAllById(anyList())).thenReturn(Collections.emptyList());
-        when(ratingRepository.saveAllAndFlush(anyIterable())).thenReturn(List.of(product1.getRating(), product2.getRating()));
+        when(ratingRepository.findAllByRateAndCount(anyList())).thenReturn(List.of(product1.getRating()));
+        when(ratingRepository.save(any(Rating.class))).thenReturn(product2.getRating());
+        doNothing().when(ratingRepository).flush();
 
-        when(productRepository.findAllById(anyList())).thenReturn(List.of(product1));
-        doNothing().when(productRepository).saveImportedProducts(anyList());
-        when(productRepository.saveAll(anyList())).thenReturn(List.of(product2));
-
-
-        productService.saveImportedProducts(dummyDtos);
+        when(productRepository.findAllByExternalIds(anyList())).thenReturn(List.of(product1));
+        when(productRepository.saveAll(anyList())).thenReturn(List.of(product1, product2));
 
 
-        verify(categoryRepository).findAllById(anyList());
-        verify(categoryRepository).saveAllAndFlush(anyIterable());
+        productService.saveImportedProducts();
 
-        verify(ratingRepository).findAllById(anyList());
-        verify(ratingRepository).saveAllAndFlush(anyIterable());
 
-        verify(productRepository).findAllById(anyList());
-        verify(productRepository).saveImportedProducts(anyList());
+        verify(importProductMapper, times(dummyDtos.size())).map(any(ProductDto.class));
+
+        verify(categoryRepository).findAllByNames(anyList());
+        verify(categoryRepository).save(any(Category.class));
+        verify(categoryRepository).flush();
+
+        verify(ratingRepository).findAllByRateAndCount(anyList());
+        verify(ratingRepository).save(any(Rating.class));
+        verify(ratingRepository).flush();
+
+        verify(productRepository).findAllByExternalIds(anyList());
         verify(productRepository).saveAll(anyList());
     }
 
@@ -133,9 +147,10 @@ class ProductServiceTest {
                 .rating(new RatingReadDto(2.3D, 100))
                 .build();
 
-        when(categoryRepository.save(any(Category.class))).thenReturn(product1.getCategory());
+        when(categoryRepository.findByName(anyString())).thenReturn(Optional.of(product1.getCategory()));
         when(ratingReadMapper.map(any(RatingReadDto.class))).thenReturn(product1.getRating());
-        when(ratingRepository.saveAndFlush(any(Rating.class))).thenReturn(product1.getRating());
+        when(ratingRepository.findByRateAndCount(any(RateCount.class))).thenReturn(Optional.of(product1.getRating()));
+
         when(productCreateEditMapper.map(dummyDto)).thenReturn(product1);
         when(productRepository.saveAndFlush(product1)).thenReturn(product1);
         when(productReadMapper.map(product1)).thenReturn(dummyDto);
@@ -144,9 +159,47 @@ class ProductServiceTest {
 
         assertEquals(dummyDto, result);
 
-        verify(categoryRepository).save(any(Category.class));
+        verify(categoryRepository).findByName(anyString());
+        verify(categoryRepository, never()).saveAndFlush(any(Category.class));
+
         verify(ratingReadMapper).map(any(RatingReadDto.class));
+        verify(ratingRepository).findByRateAndCount(any(RateCount.class));
+        verify(ratingRepository, never()).saveAndFlush(any(Rating.class));
+
+        verify(productCreateEditMapper).map(dummyDto);
+        verify(productRepository).saveAndFlush(product1);
+        verify(productReadMapper).map(product1);
+    }
+
+    @Test
+    void saveWhenCategoryAndRatingNotFoundThenFirstOfAllSaveThem() {
+        var dummyDto = ProductDto.builder()
+                .category("new category")
+                .rating(new RatingReadDto(2.2D, 222))
+                .build();
+
+        when(categoryRepository.findByName(anyString())).thenReturn(Optional.empty());
+        when(categoryRepository.saveAndFlush(any(Category.class))).thenReturn(product1.getCategory());
+
+        when(ratingReadMapper.map(any(RatingReadDto.class))).thenReturn(product1.getRating());
+        when(ratingRepository.findByRateAndCount(any(RateCount.class))).thenReturn(Optional.empty());
+        when(ratingRepository.saveAndFlush(any(Rating.class))).thenReturn(product1.getRating());
+
+        when(productCreateEditMapper.map(dummyDto)).thenReturn(product1);
+        when(productRepository.saveAndFlush(product1)).thenReturn(product1);
+        when(productReadMapper.map(product1)).thenReturn(dummyDto);
+
+        var result = productService.save(dummyDto);
+
+        assertEquals(dummyDto, result);
+
+        verify(categoryRepository).findByName(anyString());
+        verify(categoryRepository).saveAndFlush(any(Category.class));
+
+        verify(ratingReadMapper, times(2)).map(any(RatingReadDto.class));
+        verify(ratingRepository).findByRateAndCount(any(RateCount.class));
         verify(ratingRepository).saveAndFlush(any(Rating.class));
+
         verify(productCreateEditMapper).map(dummyDto);
         verify(productRepository).saveAndFlush(product1);
         verify(productReadMapper).map(product1);
@@ -160,22 +213,29 @@ class ProductServiceTest {
                 .build();
 
         when(productRepository.findById(anyInt())).thenReturn(Optional.of(product1));
-        when(categoryRepository.save(any(Category.class))).thenReturn(product1.getCategory());
+
+        when(categoryRepository.findByName(anyString())).thenReturn(Optional.of(product1.getCategory()));
         when(ratingReadMapper.map(any(RatingReadDto.class))).thenReturn(product1.getRating());
-        when(ratingRepository.saveAndFlush(any(Rating.class))).thenReturn(product1.getRating());
-        when(productCreateEditMapper.map(dummyDto, product1)).thenReturn(product1);
+        when(ratingRepository.findByRateAndCount(any(RateCount.class))).thenReturn(Optional.of(product1.getRating()));
+
+        when(productCreateEditMapper.map(any(ProductDto.class), any(Product.class))).thenReturn(product1);
         when(productRepository.saveAndFlush(product1)).thenReturn(product1);
         when(productReadMapper.map(product1)).thenReturn(dummyDto);
+
 
         var result = productService.update(product1.getId(), dummyDto);
 
         assertEquals(Optional.of(dummyDto), result);
 
         verify(productRepository).findById(anyInt());
-        verify(categoryRepository).save(any(Category.class));
+        verify(categoryRepository).findByName(anyString());
+        verify(categoryRepository, never()).saveAndFlush(any(Category.class));
+
         verify(ratingReadMapper).map(any(RatingReadDto.class));
-        verify(ratingRepository).saveAndFlush(any(Rating.class));
-        verify(productCreateEditMapper).map(dummyDto, product1);
+        verify(ratingRepository).findByRateAndCount(any(RateCount.class));
+        verify(ratingRepository, never()).saveAndFlush(any(Rating.class));
+
+        verify(productCreateEditMapper).map(any(ProductDto.class), any(Product.class));
         verify(productRepository).saveAndFlush(product1);
         verify(productReadMapper).map(product1);
     }
